Pollus.Emscripten/WGPU/WGPUBrowserNative.cs

    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderCopyTextureToTexture")]
    extern public static unsafe void CommandEncoderCopyTextureToTexture(CommandEncoder* commandEncoder, ImageCopyTexture* source, in ImageCopyTexture destination, Extent3D* copySize);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderCopyTextureToTexture")]
    extern public static unsafe void CommandEncoderCopyTextureToTexture(CommandEncoder* commandEncoder, ImageCopyTexture* source, in ImageCopyTexture destination, in Extent3D copySize);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderCopyTextureToTexture")]
    extern public static unsafe void CommandEncoderCopyTextureToTexture(CommandEncoder* commandEncoder, in ImageCopyTexture source, ImageCopyTexture* destination, Extent3D* copySize);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderCopyTextureToTexture")]
    extern public static unsafe void CommandEncoderCopyTextureToTexture(CommandEncoder* commandEncoder, in ImageCopyTexture source, ImageCopyTexture* destination, in Extent3D copySize);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderCopyTextureToTexture")]
    extern public static unsafe void CommandEncoderCopyTextureToTexture(CommandEncoder* commandEncoder, in ImageCopyTexture source, in ImageCopyTexture destination, Extent3D* copySize);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderCopyTextureToTexture")]
    extern public static unsafe void CommandEncoderCopyTextureToTexture(CommandEncoder* commandEncoder, in ImageCopyTexture source, in ImageCopyTexture destination, in Extent3D copySize);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderFinish")]
    extern public static unsafe CommandBuffer* CommandEncoderFinish(CommandEncoder* commandEncoder, CommandBufferDescriptor* descriptor);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderFinish")]
    extern public static unsafe CommandBuffer* CommandEncoderFinish(CommandEncoder* commandEncoder, in CommandBufferDescriptor descriptor);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderInsertDebugMarker")]
    extern public static unsafe void CommandEncoderInsertDebugMarker(CommandEncoder* commandEncoder, byte* markerLabel);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderInsertDebugMarker")]
    extern public static unsafe void CommandEncoderInsertDebugMarker(CommandEncoder* commandEncoder, in byte markerLabel);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderInsertDebugMarker")]
    extern public static unsafe void CommandEncoderInsertDebugMarker(CommandEncoder* commandEncoder, [MarshalAs(UnmanagedType.LPUTF8Str)] string markerLabel);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderPopDebugGroup")]
    extern public static unsafe void CommandEncoderPopDebugGroup(CommandEncoder* commandEncoder);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderPushDebugGroup")]
    extern public static unsafe void CommandEncoderPushDebugGroup(CommandEncoder* commandEncoder, byte* groupLabel);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderPushDebugGroup")]
    extern public static unsafe void CommandEncoderPushDebugGroup(CommandEncoder* commandEncoder, in byte groupLabel);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderPushDebugGroup")]
    extern public static unsafe void CommandEncoderPushDebugGroup(CommandEncoder* commandEncoder, [MarshalAs(UnmanagedType.LPUTF8Str)] string groupLabel);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderResolveQuerySet")]
    extern public static unsafe void CommandEncoderResolveQuerySet(CommandEncoder* commandEncoder, QuerySet* querySet, uint firstQuery, uint queryCount, Buffer* destination, ulong destinationOffset);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderSetLabel")]
    extern public static unsafe void CommandEncoderSetLabel(CommandEncoder* commandEncoder, byte* label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderSetLabel")]
    extern public static unsafe void CommandEncoderSetLabel(CommandEncoder* commandEncoder, in byte label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderSetLabel")]
    extern public static unsafe void CommandEncoderSetLabel(CommandEncoder* commandEncoder, [MarshalAs(UnmanagedType.LPUTF8Str)] string label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderWriteTimestamp")]
    extern public static unsafe void CommandEncoderWriteTimestamp(CommandEncoder* commandEncoder, QuerySet* querySet, uint queryIndex);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderReference")]
    extern public static unsafe void CommandEncoderReference(CommandEncoder* commandEncoder);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderRelease")]
    extern public static unsafe void CommandEncoderRelease(CommandEncoder* commandEncoder);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuComputePassEncoderBeginPipelineStatisticsQuery")]
    extern public static unsafe void ComputePassEncoderBeginPipelineStatisticsQuery(ComputePassEncoder* computePassEncoder, QuerySet* querySet, uint queryIndex);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuComputePassEncoderDispatchWorkgroups")]
    extern public static unsafe void ComputePassEncoderDispatchWorkgroups(ComputePassEncoder* computePassEncoder, uint workgroupCountX, uint workgroupCountY, uint workgroupCountZ);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuComputePassEncoderDispatchWorkgroupsIndirect")]
    extern public static unsafe void ComputePassEncoderDispatchWorkgroupsIndirect(ComputePassEncoder* computePassEncoder, Buffer* indirectBuffer, ulong indirectOffset);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuComputePassEncoderEnd")]
    extern public static unsafe void ComputePassEncoderEnd(ComputePassEncoder* computePassEncoder);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuComputePassEncoderEndPipelineStatisticsQuery")]
    extern public static unsafe void ComputePassEncoderEndPipelineStatisticsQuery(ComputePassEncoder* computePassEncoder);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuComputePassEncoderInsertDebugMarker")]
    extern public static unsafe void ComputePassEncoderInsertDebugMarker(ComputePassEncoder* computePassEncoder, byte* markerLabel);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuComputePassEncoderInsertDebugMarker")]
    extern public static unsafe void ComputePassEncoderInsertDebugMarker(ComputePassEncoder* computePassEncoder, in byte markerLabel);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuComputePassEncoderInsertDebugMarker")]
    extern public static unsafe void ComputePassEncoderInsertDebugMarker(ComputePassEncoder* computePassEncoder, [MarshalAs(UnmanagedType.LPUTF8Str)] string markerLabel);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuComputePassEncoderPopDebugGroup")]
    extern public static unsafe void ComputePassEncoderPopDebugGroup(ComputePassEncoder* computePassEncoder);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuComputePassEncoderPushDebugGroup")]
    extern public static unsafe void ComputePassEncoderPushDebugGroup(ComputePassEncoder* computePassEncoder, byte* groupLabel);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuComputePassEncoderPushDebugGroup")]
    extern public static unsafe void ComputePassEncoderPushDebugGroup(ComputePassEncoder* computePassEncoder, in byte groupLabel);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuComputePassEncoderPushDebugGroup")]
    extern public static unsafe void ComputePassEncoderPushDebugGroup(ComputePassEncoder* computePassEncoder, [MarshalAs(UnmanagedType.LPUTF8Str)] string groupLabel);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuComputePassEncoderSetBindGroup")]
    extern public static unsafe void ComputePassEncoderSetBindGroup(ComputePassEncoder* computePassEncoder, uint groupIndex, BindGroup* group, nuint dynamicOffsetCount, uint* dynamicOffsets);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuComputePassEncoderSetBindGroup")]
    extern public static unsafe void ComputePassEncoderSetBindGroup(ComputePassEncoder* computePassEncoder, uint groupIndex, BindGroup* group, nuint dynamicOffsetCount, in uint dynamicOffsets);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuComputePassEncoderSetLabel")]
    extern public static unsafe void ComputePassEncoderSetLabel(ComputePassEncoder* computePassEncoder, byte* label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuComputePassEncoderSetLabel")]
    extern public static unsafe void ComputePassEncoderSetLabel(ComputePassEncoder* computePassEncoder, in byte label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuComputePassEncoderSetLabel")]
    extern public static unsafe void ComputePassEncoderSetLabel(ComputePassEncoder* computePassEncoder, [MarshalAs(UnmanagedType.LPUTF8Str)] string label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuComputePassEncoderSetPipeline")]
    extern public static unsafe void ComputePassEncoderSetPipeline(ComputePassEncoder* computePassEncoder, ComputePipeline* pipeline);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuComputePassEncoderReference")]
    extern public static unsafe void ComputePassEncoderReference(ComputePassEncoder* computePassEncoder);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuComputePassEncoderRelease")]
    extern public static unsafe void ComputePassEncoderRelease(ComputePassEncoder* computePassEncoder);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuComputePipelineGetBindGroupLayout")]
    extern public static unsafe BindGroupLayout* ComputePipelineGetBindGroupLayout(ComputePipeline* computePipeline, uint groupIndex);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuComputePipelineSetLabel")]
    extern public static unsafe void ComputePipelineSetLabel(ComputePipeline* computePipeline, byte* label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuComputePipelineSetLabel")]
    extern public static unsafe void ComputePipelineSetLabel(ComputePipeline* computePipeline, in byte label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuComputePipelineSetLabel")]
    extern public static unsafe void ComputePipelineSetLabel(ComputePipeline* computePipeline, [MarshalAs(UnmanagedType.LPUTF8Str)] string label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuComputePipelineReference")]
    extern public static unsafe void ComputePipelineReference(ComputePipeline* computePipeline);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuComputePipelineRelease")]
    extern public static unsafe void ComputePipelineRelease(ComputePipeline* computePipeline);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceCreateBindGroup")]
    extern public static unsafe BindGroup* DeviceCreateBindGroup(Device* device, BindGroupDescriptor* descriptor);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceCreateBindGroup")]
    extern public static unsafe BindGroup* DeviceCreateBindGroup(Device* device, in BindGroupDescriptor descriptor);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceCreateBindGroupLayout")]
    extern public static unsafe BindGroupLayout* DeviceCreateBindGroupLayout(Device* device, BindGroupLayoutDescriptor* descriptor);
